@@ -1,4 +1,5 @@
 0.14
+ - Add tests for Monolingual::struct2obj().
  - Fix test for Mediainfo.
  - Rewrite List::MoreUtils::none to List::Util.
  - Update copyright years.
